<resources>
    <string name="app_name">TaskTerriers</string>
    <string name="title_requests">Requests</string>
    <string name="title_services">Services</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="dot_symbol">•</string>
    <string name="welcome">Welcome !</string>
    <string name="button_google_sign_in">Sign in With Google</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="login_failed">Login failed</string>
    <string name="login_instruction">* You must use your boston university email to sign in.</string>
    <string name="service_name">* Service Name:</string>
    <string name="service_description">* Description:</string>
    <string name="service_description_placeholder">Description of this service</string>
    <string name="service_name_placeholder">CS501 tutor</string>
    <string name="major">Major:</string>
    <string name="major_placeholder">Computer Science</string>
    <string name="display">Display Major?</string>
    <string name="service_type">*Service Type:</string>
    <string name="education">Education</string>
    <string name="chore">Chores</string>
    <string name="beauty">Beauty</string>
    <string name="other">Others</string>
    <string name="sports">Sports</string>
    <string name="moving">Moving</string>
    <string name="add_service">Add Service</string>
    <string name="service_rate">*Service Rate(Whole number only):</string>
    <string name="service_added_toast">Service added!</string>
    <string name="service_add_fail_toast">Fail to add service. Please try again later.</string>
    <string name="about">About</string>
    <string name="service_detail_description">Service Description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id volutpat lacus laoreet non. Vestibulum lectus mauris ultrices eros in. Semper quis lectus nulla at volutpat. In fermentum et sollicitudin ac orci phasellus. Mattis enim ut tellus elementum sagittis vitae et. Condimentum vitae sapien pellentesque habitant morbi tristique. Enim blandit volutpat maecenas volutpat blandit aliquam. Lectus quam id leo in vitae turpis massa sed. Sed arcu non odio euismod lacinia. Ut consequat semper viverra nam libero justo laoreet. Ut eu sem integer vitae justo eget magna. Nam libero justo laoreet sit amet. Varius vel pharetra vel turpis nunc eget lorem.</string>
    <string name="location">Location</string>
    <string name="settings_name">Name</string>
    <string name="settings_email">Email</string>
    <string name="settings_major">Major</string>
    <string name="settings_edit">Edit</string>
    <string name="save">Save</string>
    <string name="user_info_message">*You can always modify your information in the settings tab later.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_name">*Request Name</string>
    <string name="request_name_placeholder">Need CS501 Tutor</string>
    <string name="request_description_placeholder">Description of this request</string>
    <string name="request_type">*Request Type:</string>
    <string name="add_request">Add Request</string>
    <string name="comments">Comments</string>
    <string name="send_message">Send Message</string>
    <string name="service_location">*Location</string>

</resources>