<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.requests.RequestAddFragment"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_name"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16dp"
            android:layout_marginRight="10dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/requestNameEditText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:textSize="14dp"
                android:hint="@string/request_name_placeholder"
                android:paddingRight="25dp"
                />
            <ImageButton
                android:id="@+id/clearRequestNameButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_clear_18"
                android:background="@drawable/custom_image_button"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_description"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/requestDescriptionTextEdit"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="1000"
                android:inputType="textMultiLine"
                android:textSize="14dp"
                android:hint="@string/request_description_placeholder"
                android:paddingRight="25dp"
                android:scrollbars="vertical"
                android:lines="12"
                android:gravity="start"
                />
            <ImageButton
                android:id="@+id/clearRequestDescriptionButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_clear_18"
                android:background="@drawable/custom_image_button"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_type"
        android:fontFamily="@font/roboto_bold"
        android:textSize="16dp"
        android:layout_marginTop="12dp"/>
    <RadioGroup
        android:id="@+id/requestTypeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <RadioButton
            android:id="@+id/requestTypeEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:checked="true"
            android:theme="@style/CustomRadioButton"
            />
        <RadioButton
            android:id="@+id/requestTypeSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:theme="@style/CustomRadioButton"/>
        <RadioButton
            android:id="@+id/requestTypeChores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chore"
            android:theme="@style/CustomRadioButton"/>
        <RadioButton
            android:id="@+id/requestTypeBeauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beauty"
            android:theme="@style/CustomRadioButton"/>
        <RadioButton
            android:id="@+id/requestTypeOthers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:theme="@style/CustomRadioButton"/>
    </RadioGroup>
    <Button
        android:id="@+id/addRequestButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/add_request"
        android:layout_marginTop="12dp"
        android:enabled="false"
        />
    </LinearLayout>
</ScrollView>