<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.services.AddServiceFragment"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_name"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16dp"
            android:layout_marginRight="10dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/serviceNameTextEdit"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:textSize="14dp"
                android:hint="@string/service_name_placeholder"
                android:paddingRight="25dp"
                />
            <ImageButton
                android:id="@+id/clearServiceNameButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_clear_18"
                android:background="@drawable/custom_image_button"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_description"
                android:fontFamily="@font/roboto_bold"
                android:textSize="16dp"
                android:layout_marginRight="10dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/serviceDescriptionTextEdit"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="500"
                    android:inputType="textMultiLine"
                    android:textSize="14dp"
                    android:hint="@string/service_description_placeholder"
                    android:paddingRight="25dp"
                    android:scrollbars="vertical"
                    android:lines="8"
                    android:gravity="start"
                    />
                <ImageButton
                    android:id="@+id/clearServiceDescriptionButton"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_clear_18"
                    android:background="@drawable/custom_image_button"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        >
        <TextView
            android:id="@+id/majorTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16dp"
            />

        <EditText
            android:id="@+id/MajorTextEdit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/major_placeholder"
            android:inputType="textMultiLine"
            android:maxLength="30"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/majorTextView"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingRight="25dp"
            android:layout_marginLeft="10dp"/>
            <ImageButton
                android:id="@+id/clearMajorButton"
                app:layout_constraintRight_toRightOf="@id/MajorTextEdit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_clear_18"
                android:background="@drawable/custom_image_button"
                />

        <TextView
            android:id="@+id/displayOptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/display"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/displayOptionCheckBox"
            app:layout_constraintTop_toTopOf="parent"
            />

        <CheckBox
            android:id="@+id/displayOptionCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:buttonTint="@color/bu_red" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_rate"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            />
        <EditText
            android:id="@+id/ServiceRateTextEdit"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:hint="10"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_type"
        android:fontFamily="@font/roboto_bold"
        android:textSize="16dp"
        android:layout_marginTop="12dp"/>
    <RadioGroup
        android:id="@+id/serviceTypeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <RadioButton
            android:id="@+id/serviceTypeEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:checked="true"
            android:theme="@style/CustomRadioButton"
            />
        <RadioButton
            android:id="@+id/serviceTypeSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:theme="@style/CustomRadioButton"/>
        <RadioButton
            android:id="@+id/serviceTypeChores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chore"
            android:theme="@style/CustomRadioButton"/>
        <RadioButton
            android:id="@+id/serviceTypeBeauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beauty"
            android:theme="@style/CustomRadioButton"/>
        <RadioButton
            android:id="@+id/serviceTypeOthers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:theme="@style/CustomRadioButton"/>
    </RadioGroup>
    <Button
        android:id="@+id/addServiceButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/add_service"
        android:layout_marginTop="12dp"/>
</LinearLayout>