<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsEditFragment"
    android:paddingHorizontal="18dp"
    android:paddingVertical="5dp"
    android:layout_marginBottom="?actionBarSize"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImageView"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@mipmap/ic_launcher_round"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/CircularImageView"/>

    <ImageButton
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="@id/profileImageView"
        app:layout_constraintRight_toRightOf="@id/profileImageView"
        android:background="@drawable/custom_image_button"
        android:src="@drawable/baseline_photo_camera_24"
        />

    <LinearLayout
        android:id="@+id/userInfoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileImageView"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_name"
                android:fontFamily="@font/roboto_bold"
                android:textSize="16dp"
                android:textColor="@color/bu_black"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="example examplee"
                android:fontFamily="@font/roboto_bold"
                android:textSize="16dp"
                android:textColor="@color/neutral_60"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_email"
                android:fontFamily="@font/roboto_bold"
                android:textSize="16dp"
                android:textColor="@color/bu_black"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="example examplee"
                android:fontFamily="@font/roboto_bold"
                android:textSize="16dp"
                android:textColor="@color/neutral_60"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_major"
                android:fontFamily="@font/roboto_bold"
                android:textSize="16dp"
                android:textColor="@color/bu_black"
                android:layout_marginRight="10dp"
                android:gravity="start"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:textSize="16dp"
                android:maxLength="30"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:fontFamily="@font/roboto_bold"
                android:gravity="start"
                android:textSize="16dp"
                android:textColor="@color/bu_black"
                android:layout_marginRight="10dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16dp"
                android:maxLines="8"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:gravity="start"
                />

        </LinearLayout>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/editButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/neutral_100"
        app:strokeColor="@color/neutral_0"
        app:strokeWidth="2dp"
        app:cornerRadius="12dp"
        android:text="@string/save"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/bu_black"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
